--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Revolutionizing banking with AI-powered fintech solutions for secure and efficient financial services.">
-    <meta name="robots" content="index, follow">
+  <meta name="keywords" content="BrightMoney, Finance, FinTechAI, Finance Tech Artificial Intelligence">
+  <meta name="robots" content="index, follow">
     <meta property="og:title" content="AI-powered Fintech Solutions">
     <meta property="og:description" content="Transform your financial experience with cutting-edge AI technology. Personalized banking for the modern world.">
     <meta property="og:image" content="https://brightmoney.com/ai-banking.jpg">
